# Stereo_Depth_Ruler

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
app/: CMakeLists.txt  stereo_ruler.cpp
config/: stereo.yaml
point_cloud/: CMakeLists.txt
point_cloud/include/: pcd_write.hpp
point_cloud/src/: pcd_write.cpp
results/: frame_xxxxx.pcd  measurements.csv
stereo_vision/: CMakeLists.txt
stereo_vision/include/: stereo_calibrator.hpp  stereo_configuration.hpp  stereo_disparity.hpp  stereo_displayer.hpp  stereo_pipeline.hpp  stereo_rectifier.hpp
stereo_vision/src/: stereo_calibrator.cpp  stereo_configuration.cpp  stereo_disparity.cpp  stereo_displayer.cpp  stereo_pipeline.cpp  stereo_rectifier.cpp
utils/: CMakeLists.txt
utils/include/: helper.hpp  utils.hpp
utils/src/: helper.cpp  utils.cpp
